# ios-devices

./: .gitignore  README.md  gen.py  list.json  pyproject.toml  renovate.json
.circleci/: config.yml
.github/: renovate.json
.github/workflows/: lint.yml  update.yml
