[tool.poetry]
package-mode = false

[project]
name = "ios-devices"
version = "0.1.0"
description = ""
requires-python = ">=3.14"
dependencies = ["requests>=2.32.5"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = [
  "F",  # Pyflakes
  "E",  # pycodestyle error
  "W",  # pycodestyle warning
  "I",  # isort
  "B",  # flake8-bugbear
  "C",  # flake8-comprehensions
  "UP", # pyupgrade
]

[tool.ruff.lint.pydocstyle]
convention = "google"
