[project]
name = "ios-devices"
version = "0.1.0"
description = ""
requires-python = ">=3.14"
dependencies = ["requests>=2.32.5"]

[dependency-groups]
dev = ["ruff>=0.15.6,<0.16"]

[tool.uv]
package = false
required-version = ">=0.11.13"
exclude-newer = "7 days"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = [
  "F",   # Pyflakes
  "E",   # pycodestyle error
  "W",   # pycodestyle warning
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "C90", # mccabe
  "UP",  # pyupgrade
]

[tool.ruff.lint.pydocstyle]
convention = "google"
